// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead two no pic and two - small 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao"
  >
    lead-1
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="css-text-901oao"
  >
    lead-2
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="css-text-901oao"
  >
    support-1
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="css-text-901oao"
  >
    support-2
  </div>
</div>
`;

exports[`2. lead two no pic and two - medium 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "center",
      "WebkitFlexDirection": "row",
      "WebkitJustifyContent": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "msFlexDirection": "row",
      "msFlexPack": "center",
      "paddingLeft": "10px",
      "paddingRight": "10px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <div
      className="css-text-901oao"
    >
      lead-1
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="css-text-901oao"
    >
      lead-2
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <div
      className="css-text-901oao"
    >
      support-1
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="css-text-901oao"
    >
      support-2
    </div>
  </div>
</div>
`;

exports[`3. lead two no pic and two - wide 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "center",
      "WebkitFlexDirection": "row",
      "WebkitJustifyContent": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "msFlexDirection": "row",
      "msFlexPack": "center",
      "paddingLeft": "10px",
      "paddingRight": "10px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "width": "42%",
      }
    }
  >
    <div
      className="css-text-901oao"
    >
      lead-1
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="css-text-901oao"
    >
      lead-2
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "paddingTop": "10px",
        "width": "16%",
      }
    }
  >
    <div
      className="css-text-901oao"
    >
      support-1
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "width": "42%",
      }
    }
  >
    <div
      className="css-text-901oao"
    >
      support-2
    </div>
  </div>
</div>
`;

exports[`4. lead two no pic and two - huge 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxDirection": "normal",
      "WebkitBoxOrient": "horizontal",
      "WebkitBoxPack": "center",
      "WebkitFlexDirection": "row",
      "WebkitJustifyContent": "center",
      "flexDirection": "row",
      "justifyContent": "center",
      "msFlexDirection": "row",
      "msFlexPack": "center",
      "paddingLeft": "10px",
      "paddingRight": "10px",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "width": "42%",
      }
    }
  >
    <div
      className="css-text-901oao"
    >
      lead-1
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderBottomWidth": "1px",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginLeft": "10px",
          "marginRight": "10px",
        }
      }
    />
    <div
      className="css-text-901oao"
    >
      lead-2
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "paddingTop": "10px",
        "width": "16%",
      }
    }
  >
    <div
      className="css-text-901oao"
    >
      support-1
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderRightWidth": "1px",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginBottom": "10px",
        "marginTop": "10px",
      }
    }
  />
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "width": "42%",
      }
    }
  >
    <div
      className="css-text-901oao"
    >
      support-2
    </div>
  </div>
</div>
`;
